habit item boxes are correct size but are not quite aligned

--- a/rootine/src/components/App/Calendar/Calendar.css
+++ b/rootine/src/components/App/Calendar/Calendar.css
@@ -1,5 +1,5 @@
 .calendar-view {
-	border: 3px;
+	border: px;
 	border-radius: 4.5em;
 	box-shadow: 0px 0px 5px gray;
 	background-color: white;
