--- a/rootine/src/components/App/Calendar/HabitRow/HabitRow.css
+++ b/rootine/src/components/App/Calendar/HabitRow/HabitRow.css
@@ -1,40 +1,42 @@
 .habit-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 95%;
-  border: 1px solid red;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	width: 100%;
+	border: 1px solid red;
 }
 .habit-name-container {
-  width: 25%;
+	width: 25%;
+	width: 180px;
 }
 .habit-name {
-  font-family: var(--headings);
+	font-family: var(--headings);
 }
 .habit-item-container {
-  min-width: 80%;
-  display: flex;
-  justify-content: space-evenly;
+	min-width: 80%;
+	display: flex;
+	justify-content: flex-start;
+	/* align-items: flex-start; */
 }
 .habit-item {
-  border-radius: 25%;
-  border: 2px solid black;
-  
-  width: 4em;
-  min-width: 20px;
-  height: 4em;
-  padding: 0 4px;
-  margin: 5px 10px;
+	border-radius: 25%;
+	border: 2px solid black;
+	width: 4em;
+	min-width: 20px;
+	/* ❌ nb, height is hard-coded based on value of calendar boxes at 100% zoom... */
+	height: 4em;
+	padding: 0 4px;
+	margin: 5px 10px;
 }
 .complete {
-  background-color: green;
+	background-color: green;
 }
 .skip {
-  background-color: var(--yellow);
+	background-color: var(--yellow);
 }
 .miss {
-  background-color: var(--red);
+	background-color: var(--red);
 }
 .incomplete {
-  background-color: white;
+	background-color: white;
 }
